--- a/style.css
+++ b/style.css
@@ -142,3 +142,10 @@ footer {
   padding: 20px;
   margin-top: 40px;
 }
+
+/* Teks justify untuk About dan Portfolio */
+#about p,
+#portfolio .card p {
+  text-align: justify;
+}
+
